kube-manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: development
  labels: 
    name: development

---

apiVersion: v1
kind: Namespace
metadata:
  name: qa
  labels: 
    name: qa

---

apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels: 
    name: staging

---

apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels: 
    name: production

---
