kube-manifests/llyd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llyd-deployment
  labels:
    app: llyd-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llyd-app
  template:
    metadata:
      labels:
        app: llyd-app
    spec:
      containers:
        - name: llyd-app
          image: azurecontainerregistryyn.azurecr.io/llyd
          ports:
            - containerPort: 3001
          livenessProbe:
            httpGet:
              path: /ping
              port: 3001
            initialDelaySeconds: 15
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              path: /ping
              port: 3001
            initialDelaySeconds: 15
            timeoutSeconds: 30
