kube-manifests/cluster_ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-nginx-clusterip-service
  labels:
    app: llyd-app
spec:
  type: ClusterIP
  selector:
    app: llyd-app
  ports:
    - port: 80
      targetPort: 3001
