kube-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llyd-app-ingress-service
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec: 
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /#{env}#/
        pathType: Prefix
        backend:
          service:
            name: app1-nginx-clusterip-service
            port:
              number: 80
